Added meal selection function

--- a/app/androidCantine/src/main/res/values-de/strings.xml
+++ b/app/androidCantine/src/main/res/values-de/strings.xml
@@ -4,4 +4,6 @@
     <string name="menu_report_title">Neuigkeiten</string>
     <string name="menu_meal_title">Menü</string>
 
+    <string name="list_selection_all">Alle</string>
+
 </resources>
