--- a/app/androidCantine/src/main/res/values-de/strings.xml
+++ b/app/androidCantine/src/main/res/values-de/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="menu_report_title">Neuigkeiten</string>
     <string name="menu_meal_title">Menü</string>
+    <string name="orders_title">Bestellungen</string>
 
     <string name="list_selection_all">Alle</string>
 
