--- a/app/androidCantine/src/main/res/values/strings.xml
+++ b/app/androidCantine/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
 
     <string name="menu_report_title">News</string>
     <string name="menu_meal_title">Menu</string>
+    <string name="orders_title">Orders</string>
 
     <string name="list_selection_all">All</string>
 
