--- a/app/androidCantine/src/main/res/values-de/strings.xml
+++ b/app/androidCantine/src/main/res/values-de/strings.xml
@@ -23,4 +23,11 @@
     <string name="introduction_welcome_to">Wilkommen bei</string>
     <string name="introduction_mensa">Mensa</string>
     <string name="shopping_cart_empty">Dein Warenkorb ist leer.</string>
+    <string name="shopping_cart_added">Gericht wurde hinzugefügt</string>
+    <string name="shopping_cart_remove">Rückgangig</string>
+    <string name="shopping_cart_title">Einkaufswagen</string>
+    <string name="logout_title">Ausloggen</string>
+    <string name="more_title">Mehr</string>
+    <string name="shopping_cart_pay">Bezahlen</string>
+    <string name="error_occurred">Error occurred</string>
 </resources>
