--- a/app/androidCantine/src/main/res/values/strings.xml
+++ b/app/androidCantine/src/main/res/values/strings.xml
@@ -36,10 +36,14 @@
     <string name="error_occurred">Error occurred</string>
     <string name="shopping_cart_delete_title">Delete</string>
     <string name="shopping_cart_delete_description">\"Do you want do delete the meal?"</string>
+    <string name="order_cancel_title">Cancel</string>
+    <string name="order_cancel_description">Do you want do cancel the order?</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="shopping_cart_total">"Total: "</string>
     <string name="shopping_cart_order_created">Order was created successfully</string>
     <string name="shopping_cart_order_error">An error occurred</string>
+    <string name="order_sceen_empty">You have no orders.</string>
+    <string name="done">Close</string>
 
 </resources>
